# KDToolBars

./: .clang-tidy  .codespellrc  .gitignore  .gitreview  .krazy  .mdlrc.rb  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Changelog  LICENSE.txt  README.md  REUSE.toml
.github/workflows/: build.yml  clang-tidy.yml  clazy.yml  nightly.yml  pre-commit.yml  sanitizers.yml
.reuse/: dep5
docs/: CMakeLists.txt
docs/api/: CMakeLists.txt  Doxyfile.cmake  footer.html
example/: CMakeLists.txt  main.cpp  test.qrc
examples/: CMakeLists.txt
examples/customization/: CMakeLists.txt  main.cpp
examples/kddw-integration/: CMakeLists.txt  main.cpp
examples/simple/: CMakeLists.txt  main.cpp  test.qrc
src/: CMakeLists.txt  KDToolBarsConfig.cmake.in  kdtoolbars_export.h  kdtoolbars_resources.qrc  mainwindow.cpp  mainwindow.h  mainwindow_p.h  qt5qt6compat_p.h  toolbar.cpp  toolbar.h  toolbar_p.h  toolbarcontainerlayout.cpp  toolbarcontainerlayout.h  toolbarcustomizationdialog.cpp  toolbarcustomizationdialog.h  toolbarcustomizedlg.ui  toolbarlayout.cpp  toolbarlayout.h  toolbarseparator.cpp  toolbarseparator.h  toolbartraylayout.cpp  toolbartraylayout.h
src/fwd_headers/kdtoolbars/: mainwindow.h  toolbar.h
tests/: CMakeLists.txt  tst_mainwindow.cpp  tst_toolbar.cpp
